# asteroid-calculator

./: CMakeLists.txt
src/: CMakeLists.txt  Display.qml  main.qml
